--- a/Site/Lamps/new.html
+++ b/Site/Lamps/new.html
@@ -8,21 +8,21 @@
 		<script src="./js/script.js"></script>
 		<center>
 			<div id="headerBox">
-				<img src="./img/shapes/1900M1.jpg"/>
-				<img src="./img/shapes/1800B2.jpg"/>
-				<img src="./img/shapes/1700.jpg"/>
-				<img src="./img/shapes/1600.jpg"/>
-				<img src="./img/shapes/1500E2.jpg"/>
-				<img src="./img/shapes/1400.jpg"/>
-				<img src="./img/shapes/1300.jpg"/>
-				<img src="./img/shapes/1200.jpg"/>
-				<img src="./img/shapes/1100G1.jpg"/>
-				<img src="./img/shapes/900.jpg"/>
-				<img src="./img/shapes/700.jpg"/>
-				<img src="./img/shapes/600B1.jpg"/>
-				<img src="./img/shapes/500.jpg"/>
-				<img src="./img/shapes/400A2.jpg"/>
-				<img src="./img/shapes/100.jpg"/>
+				<img src="./img/shapes/1900M1.jpeg"/>
+				<img src="./img/shapes/1800B2.jpeg"/>
+				<img src="./img/shapes/1700.jpeg"/>
+				<img src="./img/shapes/1600.jpeg"/>
+				<img src="./img/shapes/1500E2.jpeg"/>
+				<img src="./img/shapes/1400.jpeg"/>
+				<img src="./img/shapes/1300.jpeg"/>
+				<img src="./img/shapes/1200.jpeg"/>
+				<img src="./img/shapes/1100G1.jpeg"/>
+				<img src="./img/shapes/900.jpeg"/>
+				<img src="./img/shapes/700.jpeg"/>
+				<img src="./img/shapes/600B1.jpeg"/>
+				<img src="./img/shapes/500.jpeg"/>
+				<img src="./img/shapes/400A2.jpeg"/>
+				<img src="./img/shapes/100.jpeg"/>
 			</div>
 		</center>
 		
