Added modal for site images

--- a/Site/Lamps/test.html
+++ b/Site/Lamps/test.html
@@ -48,24 +48,46 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="./img/model-header/1-5.jpeg" alt="...">
+                <img src="./img/model-header/1-5.jpeg" alt="..." data-toggle="modal" data-target="#modal1-5">
                 <div class="carousel-caption">
-                    ...
+
                 </div>
             </div>
             <div class="item">
                 <img src="./img/model-header/6-10.jpeg" alt="...">
                 <div class="carousel-caption">
-                    ...
+
                 </div>
             </div>
             <div class="item">
                 <img src="./img/model-header/11-15.jpeg" alt="...">
                 <div class="carousel-caption">
-                    ...
+
                 </div>
             </div>
-            ...
+
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="modal1-5" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+              </div>
+              <div class="modal-body">
+                <img src="./img/shapes/100.jpeg" alt="..." height="200">
+                <p>Some text in the modal.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+
+          </div>
         </div>
 
         <!-- Controls -->
